# roboeval

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.py  demo2.py  pyproject.toml
.github/workflows/: ci.yml
docs/v1/: adapter-guide-20-lines.md  demo-flow.md  environment-adapter.md  generic-rules.md  overview.md  policy-adapter.md  reports.md
examples/: README.md  __init__.py
examples/configs/: eval_config.json
examples/criteria/: safety_criteria.json
examples/demo_robot/: __init__.py  policies.py  scenarios.py
examples/generic_robots/: __init__.py  environments.py  policies.py  run_eval.py  scenarios.py
examples/scenarios/: scenarios.csv  scenarios.json
examples/simulator_integrations/: README.md  __init__.py  gymnasium_cartpole.py  mujoco_point_mass.py
examples/simulator_integrations/data/: gymnasium_cartpole_scenarios.json  mujoco_point_mass_scenarios.json
examples/trained_policy/: README.md  __init__.py  actions.py  data.py  features.py  model.py  policy.py  run_eval.py  self_check.py  train.py
examples/trained_policy/artifacts/: metadata.json  policy_v4_trained.pt
examples/trained_policy/data/: clean_policy_data.csv  synthetic_policy_data.csv
roboeval/: cli.py  core.py  environment.py  runner.py
roboeval/batched/: __init__.py  environment.py  policy.py  runner.py  scheduler.py  types.py
roboeval/batched/tests/: test_policy.py  test_runner.py  test_scheduler.py  test_types.py
roboeval/integrations/: README.md
roboeval/integrations/gymnasium/: README.md  __init__.py  adapter.py  batched_adapter.py  demo_rollout.py  notes.md  requirements.txt
roboeval/integrations/gymnasium/tests/: test_adapter.py  test_batched_adapter.py
roboeval/integrations/isaac/: README.md  __init__.py  adapter.py  batched_adapter.py  demo_rollout.py  notes.md  requirements.txt
roboeval/integrations/isaac/tests/: test_adapter.py  test_batched_adapter.py
roboeval/integrations/mujoco/: README.md  __init__.py  adapter.py  demo_rollout.py  notes.md  requirements.txt
robot_policy_eval/: __init__.py  adapters.py  cli.py  core.py  environment.py  loaders.py  runner.py
scripts/: setup_env.py  setup_env.sh
tests/: test_roboeval.py  test_robot_policy_eval.py
tests/fixtures/: __init__.py  environments.py  policies.py  scenarios.py
(+3 files in other folders)
