[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-policy-eval"
version = "0.1.0"
description = "Local SDK for robot policy evaluation, failure analysis, and regression reports."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
robot-policy-eval = "robot_policy_eval.cli:main"

[tool.setuptools.packages.find]
include = ["robot_policy_eval*"]
