[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roboeval"
version = "0.1.0"
description = "Local SDK for robot policy evaluation, failure analysis, and regression reports."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
roboeval = "roboeval.cli:main"

[tool.setuptools.packages.find]
include = ["roboeval*"]
